implement next auth

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,31 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
+  html:not(:has([data-view="dashboard"])) {
+    --background: 0 0% 100%;
+    --foreground: 20 14.3% 4.1%;
+    --card: 0 0% 100%;
+    --card-foreground: 20 14.3% 4.1%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 20 14.3% 4.1%;
+    --primary: 6.2 93.2% 71.4%;
+    --primary-foreground: 60 9.1% 97.8%;
+    --secondary: 60 4.8% 95.9%;
+    --secondary-foreground: 24 9.8% 10%;
+    --muted: 60 4.8% 95.9%;
+    --muted-foreground: 25 5.3% 44.7%;
+    --accent: 60 4.8% 95.9%;
+    --accent-foreground: 24 9.8% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 60 9.1% 97.8%;
+    --border: 20 5.9% 90%;
+    --input: 20 5.9% 90%;
+    --ring: 24.6 95% 53.1%;
+    --radius: 1rem;
+  }
+
+  /* Dashboard light mode */
+  html:not(.dark):has([data-view="dashboard"]) {
     --background: 210 30% 98%;
     --foreground: 210 15% 20%;
     --card: 210 15% 95%;
@@ -40,7 +64,8 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
-  .dark {
+  /* Dashboard dark mode */
+  html.dark:has([data-view="dashboard"]) {
     --background: 210 30% 10%;
     --foreground: 210 30% 90%;
     --card: 210 30% 15%;
@@ -65,6 +90,7 @@
     --chart-3: 240 70% 50%;
     --chart-4: 180 50% 50%;
     --chart-5: 60 40% 60%;
+    --radius: 0.5rem;
 
     --sidebar-background: 210 30% 10%;
     --sidebar-foreground: 240 4.8% 95.9%;
@@ -83,5 +109,15 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@media (width >= 48rem) {
+  body:has(header[data-is-scrolled="false"]) main {
+    padding-top: 8rem;
+  }
+
+  body:has(header[data-is-scrolled="true"]) main {
+    padding-top: 6rem;
   }
 }
