--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,7 +105,7 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border outline-primary;
   }
   body {
     @apply bg-background text-foreground;
